tests/fixtures/invalid/bytes_lshift_str.py
# Cannot left shift Bytes and Str
x: bytes = b"hello" << "hello"
